samples/_failures_safe/1761475996_d87ec6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3e273cd.c: In function ‘cleanup_compression_context’:
./samples/SAFE/__tmp_f3e273cd.c:132:20: error: expected ‘;’ at end of input
  132 |     ctx->input_size
      |                    ^
      |                    ;
./samples/SAFE/__tmp_f3e273cd.c:132:5: error: expected declaration or statement at end of input
  132 |     ctx->input_size
      |     ^~~
